# bazel_maven_repository_bug

./: BUILD.bazel  Main.java  WORKSPACE  greeter.proto
