load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
    deps = [],
)

java_proto_library(
    name = "greeter_java_proto",
    deps = [":greeter_proto"],
)

java_grpc_library(
    name = "greeter_java_grpc",
    srcs = [":greeter_proto"],
    deps = [":greeter_java_proto"],
)

java_library(
    name = "bug",
    srcs = [
        "Main.java",
    ],
    deps = [
        "@maven//com/google/guava",
        ":greeter_java_grpc",
    ],
)
